<resources>
    <string name="app_name">SubscriptionApp</string>
    <string name="title_home">Home</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_profile">Profile</string>
    <string name="title_sublist">Subscriptions</string>
    <string name="title_sublistadd">Add Subscription</string>

    <string name="button_sublistadd">Add Sub</string>
    <string name="button_settings">Settings</string>
    <string name="text_TotalSumPerMonth">Total Cost:</string>
    <string name="text_AveragePerMonth">Average Cost:</string>
    <string name="text_AboCount">Active Subscriptions:</string>
    <string name="text_Premium">Hol dir Premium!</string>
    <string name="text_Language">Language:</string>
    <string name="text_lan_de">DE</string>
    <string name="text_lan_en">EN</string>
    <string name="text_lan_ch">CH</string>

    <string name="profile_color">Color: </string>
    <string name="profile_darkMode">Dark Mode:</string>
    <string name="profile_r">R</string>
    <string name="profile_g">G</string>
    <string name="profile_b">B</string>
    <string name="profile_y">Y</string>
    <string name="profile_p">P</string>
    <string name="profile_d">D</string>

    <string name="stat_amount">Subscription Amount:</string>
    <string name="stat_day">Cost per Day:</string>
    <string name="stat_week">Cost per Week:</string>
    <string name="stat_month">Cost per Month:</string>
    <string name="stat_year">Cost per Year:</string>
    <string name="stat_most_expensive">Most expensive Subscriptions:</string>
    <string name="stat_cheapest">Cheapest Subscriptions:</string>
    <string name="stat_average">Average Subscription cost:</string>
</resources>