<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.subscriptionapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.subscriptionapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile" />
    <fragment
        android:id="@+id/navigation_statistics"
        android:name="com.example.subscriptionapp.ui.statistics.StatisticsFragment"
        android:label="@string/title_statistics" />
    <fragment
        android:id="@+id/navigation_sublist"
        android:name="com.example.subscriptionapp.ui.sublist.SubListFragment"
        android:label="@string/title_sublist" >
        <action
            android:id="@+id/action_navigation_sublist_to_navigation_sublistadd"
            app:destination="@id/navigation_sublistadd" />
    </fragment>
    <fragment
        android:id="@+id/navigation_sublistadd"
        android:name="com.example.subscriptionapp.ui.sublistadd.SubListAddFragment"
        android:label="@string/title_sublistadd"
        tools:layout="@layout/fragment_sublistadd" >
        <action
            android:id="@+id/action_navigation_sublistadd_to_navigation_sublist"
            app:destination="@id/navigation_sublist" />
    </fragment>
</navigation>